fix: remove gap

--- a/src/components/sections/about/About.module.css
+++ b/src/components/sections/about/About.module.css
@@ -5,7 +5,7 @@
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr;
   row-gap: 4.625rem;
   column-gap: 4.5rem;
 }
